[package]
name = "testit"
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
rayon = "1.10.0"
rayon-progress = "1.0.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
wait-timeout = "0.2.0"
